--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="src/images/favicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN Blog</title>
+    <title>Blogverse</title>
   </head>
   <body>
     <div id="root"></div>
